[gd_scene load_steps=46 format=2]

[ext_resource path="res://Game Objects/Rose/Rose_Main_Script.gd" type="Script" id=1]
[ext_resource path="res://Design and Prototypes/fade.png" type="Texture" id=2]
[ext_resource path="res://Game Objects/Rose/Detect_Collision.gd" type="Script" id=3]
[ext_resource path="res://Game Objects/Rose/Skin_Controller.gd" type="Script" id=4]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_Idle.png" type="Texture" id=5]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_Run.png" type="Texture" id=6]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_Jump.png" type="Texture" id=7]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_Fall.png" type="Texture" id=8]
[ext_resource path="res://sprites/Rose test sprites/hurt.png" type="Texture" id=9]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_Jump_To_Fall.png" type="Texture" id=10]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_X_Attack.png" type="Texture" id=11]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_XX_Attack.png" type="Texture" id=12]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_XXX_Attack.png" type="Texture" id=13]
[ext_resource path="res://sprites/Rose Sprites/Rose_Cute_Skin/Rose_B_Def_Attack.png" type="Texture" id=14]
[ext_resource path="res://sprites/Rose test sprites/Attacks/Y_attack.png" type="Texture" id=15]
[ext_resource path="res://sprites/Rose test sprites/Attacks/YY_attack.png" type="Texture" id=16]
[ext_resource path="res://sprites/Rose test sprites/Attacks/YYY_attack.png" type="Texture" id=17]
[ext_resource path="res://Game Objects/Rose/Attack_State.gd" type="Script" id=18]
[ext_resource path="res://Game Objects/Rose/Move_State.gd" type="Script" id=19]
[ext_resource path="res://Game Objects/Rose/Hurt_State.gd" type="Script" id=20]
[ext_resource path="res://Design and Prototypes/forest_bg1.png" type="Texture" id=21]
[ext_resource path="res://Design and Prototypes/forest_bg2.png" type="Texture" id=22]
[ext_resource path="res://Design and Prototypes/Capture.PNG" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "fadeanim"
tracks/0/type = "value"
tracks/0/path = NodePath("fadeSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/BDefaultSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/FallSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/HurtSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/StillSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/JumpSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/RunSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=8]
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/XAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.11, 0.12, 0.13, 0.14, 0.15, 0.16, 0.17, 0.18, 0.22, 0.26, 0.3, 0.32, 0.34, 0.4, 0.44, 0.48, 0.52, 0.62, 0.66, 0.7, 0.74, 0.78, 0.82 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/XXAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=10]
step = 0.14
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/XXXAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.28, 0.42, 0.56, 0.7, 0.84 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=11]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/YAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/YYAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/YYYAttackSprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 6.53191, 18.3738 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 318.155, 178.611 )

[sub_resource type="Curve" id=16]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 108.281 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=17]
curve = SubResource( 16 )

[sub_resource type="Gradient" id=18]
colors = PoolColorArray( 0.21875, 0.155945, 0.0751953, 1, 0.476563, 0.406812, 0.273651, 0.281765 )

[sub_resource type="GradientTexture" id=19]
gradient = SubResource( 18 )

[sub_resource type="Curve" id=20]
_data = [ Vector2( 0, 0.639648 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=21]
curve = SubResource( 20 )

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 25.0
angle_random = 1.0
angle_curve = SubResource( 17 )
scale = 5.0
scale_curve = SubResource( 21 )
color_ramp = SubResource( 19 )

[node name="Rose" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 289
script = ExtResource( 1 )
max_hp = 5
damage = 10
tag = "player"

[node name="fadeanim" type="AnimationPlayer" parent="."]
anims/fadeanim = SubResource( 1 )

[node name="fadeSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
z_index = 100
texture = ExtResource( 2 )

[node name="floor_cast" type="RayCast2D" parent="."]
position = Vector2( 6, 18 )
enabled = true
cast_to = Vector2( 0, 0.7 )
collision_mask = 289

[node name="floor_cast2" type="RayCast2D" parent="."]
position = Vector2( -6, 18 )
enabled = true
cast_to = Vector2( 0, 0.7 )
collision_mask = 289

[node name="floor_cast3" type="RayCast2D" parent="."]
position = Vector2( 0, 18 )
enabled = true
cast_to = Vector2( 0, 0.7 )
collision_mask = 289

[node name="animator" type="AnimationPlayer" parent="."]
anims/BDefAttack = SubResource( 2 )
anims/Fall = SubResource( 3 )
anims/Hurt = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/XAttack = SubResource( 8 )
anims/XXAttack = SubResource( 9 )
anims/XXXAttack = SubResource( 10 )
anims/YAttack = SubResource( 11 )
anims/YYAttack = SubResource( 12 )
anims/YYYAttack = SubResource( 13 )

[node name="PhysicsCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="DamageArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2
collision_mask = 1048
script = ExtResource( 3 )

[node name="TriggerCollider" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 14 )

[node name="RayCastCollision" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 14337

[node name="Sprites" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 4 )

[node name="StillSprites" type="Sprite" parent="Sprites"]
texture = ExtResource( 5 )
hframes = 5

[node name="RunSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 6 )
hframes = 8
frame = 2

[node name="JumpSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 7 )
hframes = 3

[node name="FallSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 8 )
hframes = 3
frame = 2

[node name="HurtSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 9 )

[node name="JumpToFallSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 10 )
hframes = 2
frame = 1

[node name="XAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 11 )
hframes = 25

[node name="XXAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 12 )
hframes = 6
frame = 2

[node name="XXXAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 13 )
hframes = 7
frame = 6

[node name="BDefaultSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 14 )
hframes = 5

[node name="YAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 15 )
hframes = 2
frame = 1

[node name="YYAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 16 )
hframes = 2

[node name="YYYAttackSprites" type="Sprite" parent="Sprites"]
visible = false
texture = ExtResource( 17 )
hframes = 10

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -100 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
drag_margin_h_enabled = false
drag_margin_left = 0.05
drag_margin_right = 0.05
drag_margin_bottom = 0.03

[node name="Viewport" type="Viewport" parent="Camera2D"]
size = Vector2( 1, 1 )

[node name="DetectBashHitboxArea" type="Area2D" parent="Camera2D"]
editor/display_folded = true
collision_layer = 512
collision_mask = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/DetectBashHitboxArea"]
shape = SubResource( 15 )

[node name="DetectPierceHitboxArea" type="Area2D" parent="Camera2D"]
editor/display_folded = true
collision_layer = 512
collision_mask = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/DetectPierceHitboxArea"]
shape = SubResource( 15 )

[node name="DetectSlashHitboxArea" type="Area2D" parent="Camera2D"]
collision_layer = 512
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/DetectSlashHitboxArea"]
position = Vector2( 0, 0.698349 )
shape = SubResource( 15 )

[node name="States" type="Node2D" parent="."]
editor/display_folded = true

[node name="Attack" type="Node2D" parent="States"]
script = ExtResource( 18 )

[node name="InterruptTimer" type="Timer" parent="States/Attack"]

[node name="CooldownTimer" type="Timer" parent="States/Attack"]

[node name="Move" type="Node2D" parent="States"]
script = ExtResource( 19 )

[node name="Hurt" type="Node2D" parent="States"]
script = ExtResource( 20 )

[node name="ParallaxBackground1" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2( 0.25, 0.1 )
motion_offset = Vector2( 0, -300 )
motion_mirroring = Vector2( 900, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground1/ParallaxLayer"]
texture = ExtResource( 21 )
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2( 0.5, 0.15 )
motion_offset = Vector2( 0, -300 )
motion_mirroring = Vector2( 900, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground1/ParallaxLayer2"]
texture = ExtResource( 22 )
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground1"]
motion_scale = Vector2( 0.8, 0.8 )
motion_offset = Vector2( 0, -100 )
motion_mirroring = Vector2( 900, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground1/ParallaxLayer3"]
texture = ExtResource( 23 )
centered = false

[node name="kickup" type="Particles2D" parent="."]
position = Vector2( -2.20062, 19.3654 )
rotation = 3.40339
emitting = false
amount = 3
one_shot = true
explosiveness = 0.95
local_coords = false
process_material = SubResource( 22 )

[node name="kickup2" type="Particles2D" parent="."]
position = Vector2( -2.20062, 19.3654 )
rotation = 3.40339
emitting = false
amount = 3
one_shot = true
explosiveness = 0.95
local_coords = false
process_material = SubResource( 22 )
[connection signal="frame_changed" from="Sprites/RunSprites" to="." method="_on_RunSprites_frame_changed"]
[connection signal="frame_changed" from="Sprites/XAttackSprites" to="States/Attack" method="_frame_changed"]
[connection signal="frame_changed" from="Sprites/XXAttackSprites" to="States/Attack" method="_frame_changed"]
[connection signal="frame_changed" from="Sprites/XXXAttackSprites" to="States/Attack" method="_frame_changed"]
[connection signal="frame_changed" from="Sprites/BDefaultSprites" to="States/Attack" method="_frame_changed"]
[connection signal="area_entered" from="Camera2D/DetectBashHitboxArea" to="." method="_on_DetectHitboxArea_area_entered"]
[connection signal="area_exited" from="Camera2D/DetectBashHitboxArea" to="." method="_on_DetectHitboxArea_area_exited"]
[connection signal="area_entered" from="Camera2D/DetectPierceHitboxArea" to="." method="_on_DetectHitboxArea_area_entered"]
[connection signal="area_exited" from="Camera2D/DetectPierceHitboxArea" to="." method="_on_DetectHitboxArea_area_exited"]
[connection signal="area_entered" from="Camera2D/DetectSlashHitboxArea" to="." method="_on_DetectHitboxArea_area_entered"]
[connection signal="area_exited" from="Camera2D/DetectSlashHitboxArea" to="." method="_on_DetectHitboxArea_area_exited"]
